--- a/app/package.json
+++ b/app/package.json
@@ -18,7 +18,11 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "three": "^0.182.0",
+    "use-sync-external-store": "^1.6.0",
     "zustand": "^5.0.11"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "typescript": "~5.9.2"
+  }
 }
