--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shatter-morph",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha",
   "main": "index.js",
   "scripts": {
     "start": "expo start",
