--- a/app/package.json
+++ b/app/package.json
@@ -4,15 +4,17 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "expo": "~54.0.33",
+    "expo-blur": "^15.0.8",
     "expo-gl": "~16.0.10",
+    "expo-haptics": "^15.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-three": "^8.0.0",
     "react": "19.1.0",
